--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
+    "@types/node": "^20.14.11",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
