--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "play-sound": "^1.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.11",
+    "@types/play-sound": "^1.1.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
